@@ -1,0 +1,81 @@
+	.include 'dpf.inc'
+
+	.area LCDAUX (CODE)
+
+_lcd_custom_init::
+	mov	p3dir,#0x0
+	anl	p1dir,#0xe8
+	anl	p2dir,#0xfd
+	clr	LCD_CS
+	clr	LCD_RST
+	mov	a,#0x96
+	lcall	X1543
+	setb	LCD_RST
+	mov	a,#0xc8
+	lcall	X1543
+	mov	dptr,#_custom_initseq
+	ljmp	_lcd_init_by_table
+
+X1543:	mov	r5,a
+X1544:	mov	r6,#0x18
+X1546:	mov	r7,#0xfa
+X1548:	djnz	r7,X1548
+	djnz	r6,X1546
+	djnz	r5,X1544
+	ret	
+
+_lcd_custom_setcontrast::
+	ljmp	_lcd_set_contrast_by_table
+
+	.area LCDAUX (CODE)
+
+_custom_contrasttbl::
+  .db  0x10, 0x10, 0x10, 0x10, 0x10, 0x10, 0x10
+_custom_contrasttbl_len::  .db  7
+
+_custom_contrasttbl2::
+  .db  0x71, 0x00, 0x71, 0x00, 0x91, 0x00, 0x91, 0x00, 0xff
+_custom_contrasttbl2_len::  .db  9
+
+_custom_contrasttbl2_offsets::
+  .db  0x07
+_custom_contrasttbl2_offsets_len::  .db  1
+
+_custom_backlighttbl::
+  .db  0x00, 0x0a, 0x0b, 0x0c, 0x0d, 0x0e, 0x0f, 0x10, 0x11, 0x12
+  .db  0x13, 0x14, 0x15, 0x17, 0x1b, 0x1f, 0x23, 0x27, 0x2b, 0x2d
+  .db  0x31, 0x31
+_custom_backlighttbl_len::  .db  22
+
+_custom_backlighttbl2::
+  .db  0x00, 0x03, 0x06, 0x07, 0x08, 0x09, 0x0a, 0x0a, 0x0b, 0x0b
+  .db  0x0c, 0x0c, 0x0d, 0x0d, 0x0f, 0x11, 0x13, 0x15, 0x17, 0x18
+  .db  0x18, 0x18
+_custom_backlighttbl2_len::  .db  22
+
+_custom_initseq::
+  .db  0x72, 0x00, 0x01, 0x92, 0x01, 0x00, 0x72, 0x00, 0x02, 0x92
+  .db  0x07, 0x00, 0x72, 0x00, 0x03, 0x92, 0x10, 0xa8, 0x72, 0x00
+  .db  0x08, 0x92, 0x03, 0x02, 0x72, 0x00, 0x09, 0x92, 0x00, 0x00
+  .db  0x72, 0x00, 0x0a, 0x92, 0x00, 0x08, 0x72, 0x00, 0x10, 0x92
+  .db  0x00, 0x00, 0x72, 0x00, 0x11, 0x92, 0x00, 0x05, 0x72, 0x00
+  .db  0x12, 0x92, 0x00, 0x00, 0x72, 0x00, 0x13, 0x92, 0x00, 0x00
+  .db  0x72, 0x00, 0x10, 0x92, 0x12, 0xb0, 0x72, 0x00, 0x11, 0x92
+  .db  0x00, 0x07, 0x72, 0x00, 0x12, 0x92, 0x00, 0x8c, 0x72, 0x00
+  .db  0x13, 0x92, 0x18, 0x00, 0xb0, 0x64, 0x72, 0x00, 0x29, 0x92
+  .db  0x00, 0x0b, 0xb0, 0x64, 0x72, 0x00, 0x75, 0x92, 0x00, 0x00
+  .db  0x72, 0x00, 0x30, 0x92, 0x00, 0x00, 0x72, 0x00, 0x31, 0x92
+  .db  0x01, 0x06, 0x72, 0x00, 0x32, 0x92, 0x01, 0x01, 0x72, 0x00
+  .db  0x35, 0x92, 0x01, 0x06, 0x72, 0x00, 0x36, 0x92, 0x02, 0x03
+  .db  0x72, 0x00, 0x37, 0x92, 0x00, 0x00, 0x72, 0x00, 0x38, 0x92
+  .db  0x07, 0x07, 0x72, 0x00, 0x39, 0x92, 0x02, 0x04, 0x72, 0x00
+  .db  0x3c, 0x92, 0x01, 0x06, 0x72, 0x00, 0x3d, 0x92, 0x01, 0x03
+  .db  0x72, 0x00, 0x50, 0x92, 0x00, 0x00, 0x72, 0x00, 0x51, 0x92
+  .db  0x00, 0xef, 0x72, 0x00, 0x52, 0x92, 0x00, 0x00, 0x72, 0x00
+  .db  0x53, 0x92, 0x01, 0x3f, 0x72, 0x00, 0x60, 0x92, 0xa7, 0x00
+  .db  0x72, 0x00, 0x61, 0x92, 0x00, 0x01, 0x72, 0x00, 0x90, 0x92
+  .db  0x00, 0x30, 0x72, 0x00, 0x07, 0x92, 0x01, 0x33, 0xb0, 0x64
+  .db  0x72, 0x00, 0x20, 0x92, 0x00, 0x00, 0x72, 0x00, 0x21, 0x92
+  .db  0x00, 0x00, 0xb0, 0x64, 0x72, 0x00, 0x22, 0xff
+_custom_initseq_len::  .db  228
+
